update untuk mekanisme login

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.1
   image_picker: ^0.8.7+3
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
