--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.2.1
   image_picker: ^0.8.7+3
   shared_preferences: ^2.5.3
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
