--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.1
+  http_parser: ^4.0.0 
   image_picker: ^0.8.7+3
   shared_preferences: ^2.5.3
   cached_network_image: ^3.3.0
+  intl: ^0.18.1
+  numberpicker: ^2.1.1
 
 dev_dependencies:
   flutter_test:
