--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   numberpicker: ^2.1.1
   firebase_core: ^3.13.1
   flutter_markdown: ^0.7.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
