--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_core: ^3.13.1
   flutter_markdown: ^0.7.0
   url_launcher: ^6.3.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
